--- a/Aplicatie/Flask/carplanner/templates/base.html
+++ b/Aplicatie/Flask/carplanner/templates/base.html
@@ -13,50 +13,57 @@
   <body background="static/background.png">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="/static/mainlogo.png" width="80" height="80" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Despre</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tarife</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li id="menu-item-?????" class="nav-item btn btn-primary btn-sm mr-1">
-              <a class="nav-link" href="#">Sign Up</a>
-            </li>
-            <li id="menu-item-??????" class="nav-item btn btn-success btn-sm mr-1">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-          </ul>
-        </div>
+      <a class="navbar-brand" href="#">
+        <img src="/static/mainlogo.png" width="50" height="50" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link mr-3" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item mr-3">
+            <a class="nav-link" href="#">Despre</a>
+          </li>
+          <li class="nav-item mr-3">
+            <a class="nav-link" href="#">Tarife</a>
+          </li>
+          <li class="nav-item mr-3">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li id="menu-item-?????" class="nav-item btn btn-primary btn-sm mr-3">
+            <a class="nav-link" href="#">Sign Up</a>
+          </li>
+          <li id="menu-item-??????" class="nav-item btn btn-success btn-sm mr-3">
+            <a class="nav-link" href="#">Login</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <h1>.</h1>
-    <h1>.</h1>
-        <!--<div class="container">-->
+
+
+
     {% block content %}
-
-
     {% endblock %}
-        <!--</div>-->
 
+    <!-- Footer -->
+    <footer class="page-footer font-small blue">
 
-    </body>
-  </html>
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a href="/"> carplanner.ro</a>
+      </div>
+      <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+
+  </body>
+</html>
