--- a/Aplicatie/Flask/carplanner/templates/base.html
+++ b/Aplicatie/Flask/carplanner/templates/base.html
@@ -7,13 +7,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/static/favicon.ico"/>
-    <link rel="stylesheet" href=/static/master.css"
+    <link rel="stylesheet" type="text/css" href="static/master.css"/>
     <title></title>
   </head>
   <body background="static/background.png">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="/static/mainlogo.png" width="50" height="50" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,18 +22,18 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link mr-3" href="#">Home
+            <a class="nav-link mr-3" href="/">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="#">Despre</a>
+            <a class="nav-link" href="/despre">Despre</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="#">Tarife</a>
+            <a class="nav-link" href="/tarife">Tarife</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -47,8 +47,6 @@
       </div>
     </nav>
     <h1>.</h1>
-
-
 
     {% block content %}
     {% endblock %}
