Starting of register / log in

--- a/Aplicatie/Flask/carplanner/templates/base.html
+++ b/Aplicatie/Flask/carplanner/templates/base.html
@@ -38,10 +38,10 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li id="menu-item-?????" class="nav-item btn btn-primary btn-sm mr-3">
-            <a class="nav-link" href="#">Sign Up</a>
+            <a class="nav-link" href="/register">Sign Up</a>
           </li>
           <li id="menu-item-??????" class="nav-item btn btn-success btn-sm mr-3">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="/login">Login</a>
           </li>
         </ul>
       </div>
