--- a/Aplicatie/Flask/carplanner/templates/index.html
+++ b/Aplicatie/Flask/carplanner/templates/index.html
@@ -16,7 +16,7 @@
   <p class="lead">Cum functioneaza?</p>
   <p class="lead">Iti faci cont, iti adaugi masina in sistem, adaugi documentele scadente si uiti de grija. Vei fi notificat pe mail cand se apropie expirarea unui document sau apropierea unei revizii</p>
   <div class="text-center">
-    <a class=" btn btn-primary btn-lg" href="#" role="button">Vreau cont</a>
+    <a class=" btn btn-primary btn-lg" href="/register" role="button">Vreau cont</a>
   </div>
 </div>
 
