Register + Login + Forget

--- a/Aplicatie/Flask/carplanner/templates/contact.html
+++ b/Aplicatie/Flask/carplanner/templates/contact.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<link rel="stylesheet" type="text/css" href="static/contact.css"/>
+
 <!-- Header - set the background image for the header in the line below -->
 <header class="py-5 bg-image-full" style="background-size: 2500px;background-image: url('/static/chicago-background.jpg');">
   <img class="img-fluid d-block mx-auto" src="/static/mainlogo.png" width="200" alt="">
