--- a/Aplicatie/Flask/carplanner/templates/base.html
+++ b/Aplicatie/Flask/carplanner/templates/base.html
@@ -8,9 +8,10 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/static/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="static/master.css"/>
+
     <title></title>
   </head>
-  <body background="static/background.png">
+  <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="/">
@@ -46,10 +47,28 @@
         </ul>
       </div>
     </nav>
-    <h1>.</h1>
+    <br><br><br>
 
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+          {% for message in messages %}
+            {{ message }}
+            <br>
+          {% endfor %}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      {% endif %}
+    {% endwith %}
+
+
+    <!-- Here comes all the pages -->
     {% block content %}
     {% endblock %}
+
 
     <!-- Footer -->
     <footer class="page-footer font-small blue">
