--- a/Aplicatie/Flask/carplanner/templates/uitatparola.html
+++ b/Aplicatie/Flask/carplanner/templates/uitatparola.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-<link rel="stylesheet" type="text/css" href="static/login.css"/>
+<link rel="stylesheet" type="text/css" href="static/uitatparola.css"/>
 <!--Fontawesome CDN-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 <form method="POST">
-  {% if form.email.errors or form.parola.errors%}
+  {% if form.email.errors%}
     <div class="alert alert-danger" role="alert">
   {% endif %}
   {% if form.email.errors %}
@@ -16,14 +16,7 @@
         {% endfor %}
 
   {% endif %}
-
-  {% if form.parola.errors %}
-        {% for error in form.parola.errors %}
-        {{ error }}
-        <br>
-        {% endfor %}
-  {% endif %}
-  {% if form.email.errors or form.parola.errors%}
+  {% if form.email.errors%}
     </div>
   {% endif %}
 </form>
@@ -32,7 +25,7 @@
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
-				<h3>Sign In</h3>
+				<h3>Introduceti mailul</h3>
 			</div>
 			<div class="card-body card-body-custom">
 				<form method="POST">
@@ -44,15 +37,6 @@
 						</div>
             {{ form.email(class_="form-control") }}
 					</div>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-            {{ form.parola(class_="form-control") }}
-					</div>
-
-
-
 					<div class="form-group">
             {{ form.submit(class_="btn float-right login_btn") }}
 					</div>
@@ -64,23 +48,10 @@
 					Nu ai cont?<a href="/register">Creeaza cont nou</a>
 				</div>
 				<div class="d-flex justify-content-center links">
-					<a href="/uitatparola">Ai uitat parola?</a>
+					Ai deja cont?<a href="/login">Conecteaza-te</a>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
-<!--
-<div class="container jumbotron bg-transparent">
-  <form method="POST">
-    {# This hidden_tag is a CSRF security feature. #}
-    {{ form.hidden_tag() }}
-    {{ form.email.label }} {{ form.email() }}
-    {{ form.parola.label }} {{ form.parola() }}
-    {{ form.submit() }}
-  </form>
-</div>
--->
-
 {% endblock %}
