--- a/Aplicatie/Flask/carplanner/templates/updateuser.html
+++ b/Aplicatie/Flask/carplanner/templates/updateuser.html
@@ -1,18 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<h1>ACCOUNT</h1>
-<!--
+
 <div class="jumbotron">
   <div align='center'>
-    <h1 >Welcome to the page for {{current_user.username}}</h1>
-    <img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.profile_image) }}">
+    <h1 >Welcome to the page for {{current_user.email}}</h1>
+    <img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.imagineProfil) }}">
     <p>{{ current_user.email }}</p>
   </div>
 </div>
@@ -20,8 +12,8 @@
   <form  method="POST" action = "" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     <div class="form-group">
-      {{ form.username.label(class="form-group") }}
-      {{form.username(class='form-control')  }}
+      {{ form.email.label(class="form-group") }}
+      {{form.email(class='form-control')  }}
     </div
     <div class="form-group">
       {{ form.email.label(class="form-group") }}
@@ -37,5 +29,5 @@
   </form>
 
 </div>
--->
+
 {% endblock content %}
