--- a/Aplicatie/Flask/carplanner/templates/updateuser.html
+++ b/Aplicatie/Flask/carplanner/templates/updateuser.html
@@ -1,13 +1,51 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="jumbotron">
+<link rel="stylesheet" type="text/css" href="static/updateuser.css"/>
+<!--Fontawesome CDN-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+<form method="POST">
+  {% if form.email.errors or form.parola.errors or form.parolaConfirm.errors%}
+    <div class="alert alert-danger" role="alert">
+  {% endif %}
+  {% if form.email.errors %}
+        {% for error in form.email.errors %}
+          {{ error }}
+          <br>
+        {% endfor %}
+
+  {% endif %}
+
+  {% if form.parola.errors %}
+        {% for error in form.parola.errors %}
+        {{ error }}
+        <br>
+        {% endfor %}
+  {% endif %}
+
+  {% if form.parolaConfirm.errors %}
+        {% for error in form.parolaConfirm.errors %}
+        {{ error }}
+        <br>
+        {% endfor %}
+  {% endif %}
+
+  {% if form.email.errors or form.parola.errors or form.parolaConfirm.errors%}
+    </div>
+  {% endif %}
+</form>
+
+<br>
+<div class="bg-transparent">
   <div align='center'>
-    <h1 >Welcome to the page for {{current_user.email}}</h1>
+    <h1 >Bine ai venit, {{nume}}!</h1>
     <img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.imagineProfil) }}">
-    <p>{{ current_user.email }}</p>
+    <br><br>
   </div>
 </div>
+
+<!--{#
 <div class="container">
   <form  method="POST" action = "" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
@@ -29,5 +67,79 @@
   </form>
 
 </div>
+#}-->
+
+
+
+
+
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+				<h3>Editare cont</h3>
+			</div>
+			<div class="card-body card-body-custom">
+				<form method="POST" enctype="multipart/form-data">
+          {{ form.hidden_tag() }}
+          {{ form.csrf_token }}
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-user"></i></span>
+						</div>
+            {{ form.email(class_="form-control") }}
+					</div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-id-card"></i></span>
+						</div>
+            {{ form.numeUser(class_="form-control") }}
+					</div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-id-card"></i></span>
+						</div>
+            {{ form.prenumeUser(class_="form-control") }}
+					</div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-building"></i></span>
+						</div>
+            {{ form.numeCompanie(class_="form-control") }}
+					</div>
+
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>
+            {{ form.parola(class_="form-control") }}
+					</div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>
+            {{ form.parolaConfirm(class_="form-control") }}
+					</div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-portrait"></i></span>
+						</div>
+            {{ form.picture(class_="form-control") }}
+					</div>
+
+					<div class="form-group">
+            {{ form.submit(class_="btn float-right login_btn") }}
+					</div>
+
+				</form>
+		</div>
+	</div>
+</div>
+
 
 {% endblock content %}
