Masina add in DB and tree hierarchy fix

--- a/Aplicatie/Flask/carplanner/templates/addvehicle.html
+++ b/Aplicatie/Flask/carplanner/templates/addvehicle.html
@@ -109,6 +109,13 @@
     <div class="input-group-prepend">
       <span class="input-group-text"><i class="fas fa-user"></i></span>
     </div>
+    {{ form.combustibil(class_="form-control") }}
+  </div>
+
+  <div class="input-group form-group">
+    <div class="input-group-prepend">
+      <span class="input-group-text"><i class="fas fa-user"></i></span>
+    </div>
     {{ form.capacitateCilindrica(class_="form-control") }}
   </div>
 
