--- a/Aplicatie/Flask/carplanner/templates/userhome.html
+++ b/Aplicatie/Flask/carplanner/templates/userhome.html
@@ -8,8 +8,8 @@
     <h1 >Bine ai venit, {{nume}}!</h1>
     <img align='center' src="{{ url_for('static', filename='profile_pics/' + user.imagineProfil) }}">
     <br><br>
-    <a class="btn btn-primary" href="/updateuser" role="button">Editare Cont</a>
-    <a class="btn btn-success" href="{{ url_for('masini.addVehicle')}}" role="button">Adauga Vehicul</a>
+    <a class="btn btn-primary" href="{{ url_for('useri.updateuser', email=current_user.email)}}" role="button">Editare Cont</a>
+    <a class="btn btn-success" href="{{ url_for('masini.addVehicle', email=current_user.email)}}" role="button">Adauga Vehicul</a>
   </div>
 </div>
 
