--- a/Aplicatie/Flask/carplanner/templates/defaultscadent.html
+++ b/Aplicatie/Flask/carplanner/templates/defaultscadent.html
@@ -4,4 +4,11 @@
 
 <h1>defaultscaent</h1><h1>defaultscaent</h1><h1>defaultscaent</h1><h1>defaultscaent</h1>
 
+
+<div class="input-group form-group">
+  <div class="input-group-prepend">
+    <span class="input-group-text"><i class="fas fa-user"></i></span>
+  </div>
+  {{ form.name(class_="form-control") }}
+</div>
 {% endblock content %}
