Details Vehicle + Default Scadent + Template for vehicle and scadent CRUD

--- a/Aplicatie/Flask/carplanner/templates/contact.html
+++ b/Aplicatie/Flask/carplanner/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<link rel="stylesheet" type="text/css" href="static/contact.css"/>
+<link rel="stylesheet" type="text/css" href="/static/contact.css"/>
 
 <!-- Header - set the background image for the header in the line below -->
 <header class="py-5 bg-image-full" style="background-size: 2500px;background-image: url('/static/chicago-background.jpg');">
