--- a/Aplicatie/Flask/carplanner/templates/base.html
+++ b/Aplicatie/Flask/carplanner/templates/base.html
@@ -7,7 +7,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/static/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="static/master.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/master.css"/>
 
     <title></title>
   </head>
