--- a/Aplicatie/Flask/carplanner/templates/uitatparola.html
+++ b/Aplicatie/Flask/carplanner/templates/uitatparola.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<link rel="stylesheet" type="text/css" href="static/uitatparola.css"/>
+<link rel="stylesheet" type="text/css" href="/static/uitatparola.css"/>
 <!--Fontawesome CDN-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
