--- a/Aplicatie/Flask/carplanner/templates/userhome.html
+++ b/Aplicatie/Flask/carplanner/templates/userhome.html
@@ -14,34 +14,39 @@
 </div>
 
 
-<!--{#
-{% for masina in masini.items %}
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Item</th>
+      <th scope="col">Marca</th>
+      <th scope="col">Model</th>
+      <th scope="col">Nr. Inmatriculare</th>
+      <th scope="col">Kilometraj</th>
+      <th scope="col">Urm. Scadent (Data)</th>
+      <th scope="col">Urm. Scadent (Km)</th>
+      <th scope="col">Detalii</th>
+      <th scope="col">Editeaza</th>
+      <th scope="col">Sterge</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for masina in masini %}
+      <tr>
+        <th scope="row">{{ masina["id"]}}</th>
+        <td>{{ masina["marcaMasina"]}}</td>
+        <td>{{ masina["modelMasina"]}}</td>
+        <td>{{ masina["numarInmatriculare"]}}</td>
+        <td>{{ masina["kilometraj"]}}</td>
+        <td>{{ masina["scadentData"]}}</td>
+        <td>{{ masina["scadentKm"]}}</td>
+        <td><a href="{{ url_for('masini.detailsVehicle', email=current_user.email, IDMasina=masina['IDMasina'])}}">Detalii</a></td>
+        <td><a href="{{ url_for('masini.editVehicle', email=current_user.email, IDMasina=masina['IDMasina'])}}">Editeaza</a></td>
+        <td><a href="{{ url_for('masini.removeVehicle', email=current_user.email, IDMasina=masina['IDMasina'])}}">Sterge</a></td>
 
-          <h2><a href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">{{ post.title }}</a></h2>
-          Written by: <a href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
-          <p class="text-muted">Published on: {{ post.date.strftime('%Y-%m-%d') }}</p>
-          <br>
-            <p>{{post.text}}</p>
-          <br>
-
-{% endfor %}
-
-
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-
-
-    {% for page_num in blog_posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-            {% if blog_posts.page == page_num %}
-              <li class="page-item disabled">
-                <a class="page-link" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a></li>
-              </li>
-            {% else %}
-              <li class="page-item"><a class="page-link" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a></li>
-            {% endif %}
+      </tr>
     {% endfor %}
-</nav>
-#}-->
+  </tbody>
+</table>
 
 
 {% endblock %}
