--- a/Aplicatie/Flask/carplanner/templates/removescadent.html
+++ b/Aplicatie/Flask/carplanner/templates/removescadent.html
@@ -2,7 +2,14 @@
 {% block content %}
 
 
-<h1>Remove Scadent</h1>
-
+<div class="container jumbotron bg-transparent">
+  <h1 class="display-5">Esti sigur ca vrei sa stergi scadentul {{scadent.numeScadent}}?</h1>
+  <p class="lead">
+    <div class="text-center">
+      <a class="btn btn-success btn-lg" href="#" role="button">Da</a>
+      <a class="btn btn-danger btn-lg" href="#" role="button">Nu</a>
+    </div>
+  </p>
+</div>
 
 {% endblock %}
