--- a/Aplicatie/Flask/carplanner/templates/base.html
+++ b/Aplicatie/Flask/carplanner/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="/static/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="/static/master.css"/>
 
-    <title></title>
+    <title>Car Planner</title>
   </head>
   <body>
     <!-- Navigation -->
