--- a/Aplicatie/Flask/carplanner/templates/detailsvehicle.html
+++ b/Aplicatie/Flask/carplanner/templates/detailsvehicle.html
@@ -95,8 +95,13 @@
   </tbody>
 </table>
 
+<div class="container jumbotron bg-transparent text-center">
+  <a class="btn btn-primary btn-lg" href="{{ url_for('useri.userhome', email=current_user.email)}}">Inapoi</a>
+  <a class="btn btn-success btn-lg" href="{{ url_for('scadente.addScadent', email=current_user.email, IDMasina=masina['IDMasina'])}}">Adauga Scadent Nou</a>
+</div>
 
-<a type="button" class="btn float-left login_btn" href="{{ url_for('scadente.addScadent', email=current_user.email, IDMasina=masina['IDMasina'])}}">Adauga Scadent Nou</a>
+
+
 
 <br>
 <br>
