--- a/Aplicatie/Flask/carplanner/templates/editvehicle.html
+++ b/Aplicatie/Flask/carplanner/templates/editvehicle.html
@@ -2,7 +2,130 @@
 {% block content %}
 
 
-<h1>Edit VEHICLE</h1>
+<link rel="stylesheet" type="text/css" href="/static/editvehicle.css"/>
 
+
+<script type="text/javascript" src="/static/master.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
+<form method="POST">
+  {% if form.numarInmatriculare.errors or form.kilometraj.errors or form.capacitateCilindrica.errors or form.anFabricatie.errors%}
+    <div class="alert alert-danger" role="alert">
+  {% endif %}
+
+  {% if form.numarInmatriculare.errors %}
+    {% for error in form.numarInmatriculare.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.kilometraj.errors %}
+    {% for error in form.kilometraj.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.capacitateCilindrica.errors %}
+    {% for error in form.capacitateCilindrica.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.anFabricatie.errors %}
+    {% for error in form.anFabricatie.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.numarInmatriculare.errors or form.kilometraj.errors or form.capacitateCilindrica.errors or form.anFabricatie.errors%}
+    </div>
+  {% endif %}
+</form>
+
+
+
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+				<h3>Editeaza masina</h3>
+			</div>
+			<div class="card-body card-body-custom">
+
+        <form method="POST">
+          {{ form.hidden_tag() }}
+          {{ form.csrf_token }}
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.numarInmatriculare(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.kilometraj(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.anFabricatie(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.combustibil(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.capacitateCilindrica(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.codMotor(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.VIN(class_="form-control") }}
+          </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.detaliiMasina(class_="form-control") }}
+          </div>
+
+          <div class="form-group">
+            {{ form.submit(class_="btn float-right login_btn") }}
+          </div>
+          <a class="btn float-left btn-primary" href="{{ url_for('useri.userhome', email=current_user.email) }}">Inapoi</a>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
