--- a/Aplicatie/Flask/carplanner/templates/updateuser.html
+++ b/Aplicatie/Flask/carplanner/templates/updateuser.html
@@ -36,43 +36,6 @@
   {% endif %}
 </form>
 
-<br>
-<div class="bg-transparent">
-  <div align='center'>
-    <h1 >Bine ai venit, {{nume}}!</h1>
-    <img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.imagineProfil) }}">
-    <br><br>
-  </div>
-</div>
-
-<!--{#
-<div class="container">
-  <form  method="POST" action = "" enctype="multipart/form-data">
-    {{ form.hidden_tag() }}
-    <div class="form-group">
-      {{ form.email.label(class="form-group") }}
-      {{form.email(class='form-control')  }}
-    </div
-    <div class="form-group">
-      {{ form.email.label(class="form-group") }}
-      {{form.email(class='form-control')  }}
-    </div>
-    <div class="form-group">
-      {{ form.picture.label(class="form-group") }}
-      {{ form.picture(class="form-control-file") }}
-    </div>
-    <div class="form-group">
-        {{ form.submit(class="btn btn-primary") }}
-    </div>
-  </form>
-
-</div>
-#}-->
-
-
-
-
-
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
@@ -135,11 +98,15 @@
 					<div class="form-group">
             {{ form.submit(class_="btn float-right login_btn") }}
 					</div>
+          <a class="btn float-left btn-primary" href="{{ url_for('useri.userhome', email=current_user.email)}}">Inapoi</a>
 
 				</form>
 		</div>
 	</div>
 </div>
 
+<div align='center'>
+  <a class="btn btn-danger" href="{{ url_for('useri.removeuser', email=current_user.email)}}" role="button">Stergere Cont</a>
+</div>
 
 {% endblock content %}
