--- a/Aplicatie/Flask/carplanner/templates/editvehicle.html
+++ b/Aplicatie/Flask/carplanner/templates/editvehicle.html
@@ -121,6 +121,8 @@
             {{ form.submit(class_="btn float-right login_btn") }}
           </div>
           <a class="btn float-left btn-primary" href="{{ url_for('useri.userhome', email=current_user.email) }}">Inapoi</a>
+          <br>
+          <a class="btn btn-success butonadauga" href="{{ url_for('scadente.addScadent', email=current_user.email, IDMasina=IDMasina)}}">Adauga Scadent Nou</a>
 
         </form>
       </div>
