--- a/Aplicatie/Flask/carplanner/templates/updateuser.html
+++ b/Aplicatie/Flask/carplanner/templates/updateuser.html
@@ -110,6 +110,7 @@
             {{ form.parolaConfirm(class_="form-control") }}
 					</div>
 
+          <label for="picture">Alegeti fotografia de profil</label>
           <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-portrait"></i></span>
