--- a/Aplicatie/Flask/carplanner/templates/addvehicle.html
+++ b/Aplicatie/Flask/carplanner/templates/addvehicle.html
@@ -9,7 +9,7 @@
 
 
 <form method="POST">
-  {% if form.marcaMasina.errors or form.modelMasina.errors or form.numarInmatriculare.errors or form.kilometraj.errors or form.capacitateCilindrica.errors or form.anFabricatie.errors%}
+  {% if form.marcaMasina.errors or form.modelMasina.errors or form.numarInmatriculare.errors or form.kilometraj.errors or form.capacitateCilindrica.errors or form.anFabricatie.errors or form.codMotor.errors or form.VIN.errors or form.detaliiMasina.errors%}
     <div class="alert alert-danger" role="alert">
   {% endif %}
 
@@ -55,30 +55,32 @@
     {% endfor %}
   {% endif %}
 
-  {% if form.marcaMasina.errors or form.modelMasina.errors or form.numarInmatriculare.errors or form.kilometraj.errors or form.capacitateCilindrica.errors or form.anFabricatie.errors%}
+
+  {% if form.codMotor.errors %}
+    {% for error in form.codMotor.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.VIN.errors %}
+    {% for error in form.VIN.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.detaliiMasina.errors %}
+    {% for error in form.detaliiMasina.errors %}
+      {{ error }}
+      <br>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.marcaMasina.errors or form.modelMasina.errors or form.numarInmatriculare.errors or form.kilometraj.errors or form.capacitateCilindrica.errors or form.anFabricatie.errors or form.codMotor.errors or form.VIN.errors or form.detaliiMasina.errors%}
     </div>
   {% endif %}
 </form>
-
-
-<!--{#
-<select class="form-control" id="color">
-    <option value=""> choose options </option>
-    {%for marca in marci%}
-      <option value="{{marca.marcaMasina}}">{{marca.marcaMasina}}</option>
-    {%endfor%}
-</select>
-<select class="form-control" id="size">
-    <option value=""> choose options </option>
-    {%for marca in marciModele%}
-      <option class="{{marca.marcaMasina}} value="{{marca.marcaMasina}}">{{marca.modelMasina}}</option>
-    {%endfor%}
-</select>
-
-<script type="text/javascript">
-    $('#size').chainedTo('#color');
-</script>#}-->
-
 
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
@@ -199,154 +201,5 @@
 <br>
 <br>
 <br>
-
-
-
-<!--{#
-<script type="text/javascript">
-    $('#model').chainedTo('#marca');
-</script>
-#}-->
-
-<!--{#
-
-<h1>addvehicle</h1>
-{%for marca in marciModele%}
-<h1>{{marca.modelMasina}}</h1>
-{%endfor%}
-<h1>{{marciModele[13].modelMasina}}</h1>
-<h1>{{current_user.email}}</h1>
-
-
-<link rel="stylesheet" type="text/css" href="static/register.css"/>
-
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-<form method="POST">
-  {% if form.email.errors or form.parola.errors or form.parolaConfirm.errors%}
-    <div class="alert alert-danger" role="alert">
-  {% endif %}
-  {% if form.email.errors %}
-        {% for error in form.email.errors %}
-          {{ error }}
-          <br>
-        {% endfor %}
-
-  {% endif %}
-
-  {% if form.parola.errors %}
-        {% for error in form.parola.errors %}
-        {{ error }}
-        <br>
-        {% endfor %}
-  {% endif %}
-
-  {% if form.parolaConfirm.errors %}
-        {% for error in form.parolaConfirm.errors %}
-        {{ error }}
-        <br>
-        {% endfor %}
-  {% endif %}
-
-  {% if form.email.errors or form.parola.errors or form.parolaConfirm.errors%}
-    </div>
-  {% endif %}
-</form>
-
-<div class="container">
-	<div class="d-flex justify-content-center h-100">
-		<div class="card">
-			<div class="card-header">
-				<h3>Inscriere</h3>
-			</div>
-			<div class="card-body card-body-custom">
-				<form method="POST">
-          {{ form.hidden_tag() }}
-          {{ form.csrf_token }}
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-user"></i></span>
-						</div>
-            {{ form.email(class_="form-control") }}
-					</div>
-
-          <div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-id-card"></i></span>
-						</div>
-            {{ form.numeUser(class_="form-control") }}
-					</div>
-
-          <div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-id-card"></i></span>
-						</div>
-            {{ form.prenumeUser(class_="form-control") }}
-					</div>
-
-          <div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-building"></i></span>
-						</div>
-            {{ form.numeCompanie(class_="form-control") }}
-					</div>
-
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-            {{ form.parola(class_="form-control") }}
-					</div>
-
-          <div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-            {{ form.parolaConfirm(class_="form-control") }}
-					</div>
-
-					<div class="form-group">
-            {{ form.submit(class_="btn float-right login_btn") }}
-					</div>
-
-				</form>
-			</div>
-			<div class="card-footer">
-				<div class="d-flex justify-content-center links">
-					<a href="/uitatparola">Ai uitat parola?</a>
-				</div>
-        <div class="d-flex justify-content-center links">
-					Ai deja cont?<a href="/login">Conecteaza-te</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-
-
-<div class="container jumbotron bg-transparent">
-  <form method="POST">
-    {{ form.hidden_tag() }}
-    {{ form.email.label }} {{ form.email() }}<br>
-    {{ form.numeUser.label }} {{ form.numeUser() }}<br>
-    {{ form.prenumeUser.label }} {{ form.prenumeUser() }}<br>
-    {{ form.numeCompanie.label }} {{ form.numeCompanie() }}<br>
-    {{ form.parola.label }} {{ form.parola() }}<br>
-    {{ form.parolaConfirm.label }} {{ form.parolaConfirm() }}<br>
-    {{ form.submit() }}
-
-    {% if form.email.errors %}
-      <ul class=errors>
-        {% for error in form.email.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-  </form>
-</div>
-#}-->
-
 
 {% endblock %}
