--- a/Aplicatie/Flask/carplanner/templates/error_pages/403.html
+++ b/Aplicatie/Flask/carplanner/templates/error_pages/403.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="jumbotron">
-    <h1>403 Access Forbidden!</h1>
+  <div class="jumbotron container bg-transparent">
+    <h1>403 Acces interzis!</h1>
+    <p>Incerci sa accesezi infromatiile altui utilizator. Accesul este interzis!</p>
   </div>
 {% endblock %}
