--- a/Aplicatie/Flask/carplanner/templates/error_pages/404.html
+++ b/Aplicatie/Flask/carplanner/templates/error_pages/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="jumbotron">
-    <h1>404 Page Not Found!</h1>
-    <p>Sorry the URL you are looking for does not exist.</p>
+<div class="jumbotron container bg-transparent">
+    <h1>404 Pagina nu a fost gasita!</h1>
+    <p>Ne pare rau, pagina pe care o cauti nu exista.</p>
   </div>
 {% endblock %}
