Update populateTables.py + Small fixes

--- a/Aplicatie/Flask/carplanner/templates/defaultscadent.html
+++ b/Aplicatie/Flask/carplanner/templates/defaultscadent.html
@@ -18,38 +18,6 @@
           {{ form.hidden_tag() }}
           {{ form.csrf_token }}
 
-
-          <!--{# <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-user"></i></span>
-            </div>
-            <p>Ulei + Filtre</p>
-            {{ form.default1(class_="form-control") }}
-          </div> #}-->
-
-          <!--{# <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-user"></i></span>
-            </div>
-            <p>Distributie</p>
-            {{ form.default2(class_="form-control") }}
-          </div>
-
-          <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-user"></i></span>
-            </div>
-            <p>Elemente Franare</p>
-            {{ form.default3(class_="form-control") }}
-          </div>
-
-          <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-user"></i></span>
-            </div>
-            <p>Baterie</p>
-            {{ form.default4(class_="form-control") }}
-          </div> #}-->
 				<div class="check-box">
 					{{ form.default1(class_="checkmark") }}
 					<p class="">Ulei si Filtre</p>
@@ -67,7 +35,7 @@
 
 				<div class="check-box">
 					{{ form.default4(class_="checkmark") }}
-					<p class="">Batere</p>
+					<p class="">Baterie</p>
 				</div>
 
           <div class="form-group">
