--- a/Aplicatie/Flask/carplanner/templates/contact.html
+++ b/Aplicatie/Flask/carplanner/templates/contact.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="form-group">
 				  <div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-default">Trimite</button>
+					<a href="/" class="btn btn-success">Trimite</a>
 				  </div>
 				</div>
 			</div>
